# llk-linux-fork

./: AUTHORS  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  llk_linux.desktop
data/: Diamond.pak  Makefile.in  QQ.pak
include/: Makefile.in  create_pak.h  llk_algorithm.h  main.h  pak.h
pixmaps/: Makefile.in
po/: zh_CN.gmo  zh_CN.po
src/: Makefile.am  Makefile.in  eggtrayicon.c  llk_about.c  llk_algorithm.c  llk_inifile.c  main.c  tray.c
src/pak/: create_pak.c  pak.c
tags/v2_3beta1/data/: Classical.pak  Makefile.am
tags/v2_3beta1/include/: Makefile.am  Makefile.in  main.h  pak.h
tags/v2_3beta1/pixmaps/: Makefile.am
tags/v2_3beta1/po/: POTFILES.in
tags/v2_3beta1/src/: Makefile.am  Makefile.in  llk_algorithm.c  llk_inifile.c
trunk/: config.guess  configure.in
trunk/data/: Makefile.in
trunk/include/: create_pak.h  llk_about.h  llk_algorithm.h  llk_inifile.h  tray.h
trunk/pixmaps/: Makefile.in
trunk/po/: llk_linux.pot
trunk/src/: eggtrayicon.c  llk_about.c  main.c  tray.c
trunk/src/pak/: create_pak.c
