## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

llk_linux_datadir = $(prefix)/@NO_PREFIX_PACKAGE_DATA_DIR@/@PACKAGE@

llk_linux_data_DATA = \
	QQ.pak\
	wav/Cancle.wav\
	wav/CanntLink.wav\
	wav/Click.wav\
	wav/GameOver.wav\
	wav/Hint.wav\
	wav/Link.wav\
	wav/Shuffle.wav\
	wav/Win.wav\
	Classical.pak\
	Diamond.pak

EXTRA_DIST = $(llk_linux_data_DATA)
