## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

llk_linux_includedir = $(pkgincludedir)

llk_linux_include_DATA = \
	eggtrayicon.h\
	llk_about.h\
	llk_algorithm.h\
	llk_inifile.h\
	main.h\
	tray.h\
	create_pak.h\
	pak.h

EXTRA_DIST = $(llk_linux_include_DATA)
