## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

llk_linux_pixmapsdir = $(prefix)/@NO_PREFIX_PACKAGE_PIXMAPS_DIR@

llk_linux_pixmaps_DATA = \
	llk_linux.png

EXTRA_DIST = $(llk_linux_pixmaps_DATA)
